4.0.3 (2018-10-17)
------------------

Enhancements
 - [web] prohibit subscribing a user with no rights
 - [web] new button to mark a task as completed (#4531)
 - [web] new button to reset Calendar categories to defaults
 - [web] moved the unseen messages count to the beginning of the window's title (#4553)
 - [web] allow export of calendars subscriptions (#4560)
 - [web] hide compose button when reading message on mobile device
 - [web] updated Angular to version 1.7.5
 - [web] updated CKEditor to version 4.10.1

Bug fixes
 - [web] include mail account name in form validation (#4532)
 - [web] calendar properties were not completely reset on cancel
 - [web] check ACLs on address book prior to delete cards
 - [web] fixed condition of copy action on cards
 - [web] fixed display of notification email in calendar properties
 - [web] fixed display of multi-days events when some weekdays are disabled
 - [web] fixed synchronisation of calendar categories
 - [web] fixed popup window detection in message viewer (#4518)
 - [web] fixed behaviour of return receipt actions
 - [web] fixed freebusy information with all-day events
 - [web] fixed support for SOGoMaximumMessageSizeLimit
 - [core] fixed email reminders support for tasks
 - [core] fixed time conflict validation (#4539)

4.0.2 (2018-08-24)
------------------

New features
 - [web] move mailboxes (#644, #3511, #4479)

Enhancements
 - [web] prohibit duplicate calendar categories in Preferences module
 - [web] added Romanian (ro) translation - thanks to Vasile Razvan Luca
 - [web] add security flags to cookies (HttpOnly, secure) (#4525)
 - [web] better theming for better customization (#4500)
 - [web] updated Angular to version 1.7.3
 - [web] updated ui-router to version 1.0.20
 - [core] enable Oracle OCI support for CentOS/RHEL v7

Bug fixes
 - [core] handle multi-valued mozillasecondemail attribute mapping
 - [core] avoid displaying empty signed emails when using GNU TLS (#4433)